tffiles/pip.tf
resource "azurerm_public_ip" "example" {
  name                = "phonebook-pip"
  location            = azurerm_resource_group.example.location
  resource_group_name = azurerm_resource_group.example.name
  allocation_method   = "Static"
  domain_name_label   = azurerm_resource_group.example.name
}
